[package]
name = "arcforge-session"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Player session management and authentication for Arcforge"

[dependencies]
arcforge-protocol = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }