[package]
name = "arcforge-tick"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Fixed-timestep tick scheduler for Arcforge"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt", "time"] }