[package]
name = "arcforge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Low-latency game backend framework for web games"

[dependencies]
arcforge-transport = { workspace = true }
arcforge-protocol = { workspace = true }
arcforge-session = { workspace = true }
arcforge-room = { workspace = true }
arcforge-tick = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }